--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .ipynb_checkpoints/
-Neural-Networks/
+data/DisasterResponse.db
 .DS_Store
+*.pkl
+models/__pycache__/train_classifier.cpython-37.pyc
